HOUSE PREDICTION EDA DATA PROCESSING

--- a/HOUSE PRICE EDA.ipynb
+++ b/HOUSE PRICE EDA.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "_cell_guid": "82a4b19f-e192-f905-0337-e47d9e497901",
+    "_cell_guid": "82a4b19f-e192-f905-0337-e47d9e497901",  ##123
     "_uuid": "277f3830a247e5741164a27f967018b16e6fd3c1",
     "collapsed": true
    },
